Fixed broken styles

--- a/css/app.css
+++ b/css/app.css
@@ -35,7 +35,16 @@ html, body {
     display: block;
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 600;
-    font-size: 14pt;
+    font-size: 13pt;
+}
+
+
+.introlink
+{
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 600;
+    font-size: 13pt;
+    text-transform:uppercase;
 }
 
 .name-imp {
@@ -101,12 +110,14 @@ html, body {
     font-size: 14pt;
 
 }
+
+
 .motive{
     text-align: left!important;
     /*font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: capitalize;*/
-    font-weight: 900;
-    font-size: 16pt;
+    font-weight: 400;
+    font-size: 12pt;
     font-style: italic;
     /*color: #2c3e50;*/
     color: #000000;
@@ -155,6 +166,28 @@ html, body {
     font-size: 12pt;
 }
 
+.mytable
+{
+    display: table;
+    border-bottom: 1px !important;
+    border-bottom-color: white !important;
+    border-spacing: 2px;
+    text-align: left;
+}
+table {
+    width: 100%;
+}
+
+th, td {
+    padding: 15px;
+    text-align: left;
+    border-bottom: 1px solid #fff;
+}
+
+.rmborder{
+    border-bottom: none !important;
+}
+
 .headerskills
 {
     /* margin-top: 140px !important; */
@@ -162,8 +195,8 @@ html, body {
     display: block !important;
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
     text-transform: uppercase !important;
-    font-weight: 700 !important;
-    font-size: 1.75em !important;
+    font-weight: 600 !important;
+    font-size: 1.4em !important;
 }
 .exp-period {
     text-align: justify;
